# delayed-streams-modeling

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  FAQ.md  IMPLEMENTATION_HISTORY.md  PLAN.md  README.md  README_QUANT_BENCH.md  ROADMAP.md  biome.json  implementation_plan.md  issue-34-update.md  moshi-profile-lowram.nsys-rep  moshi-profile.nsys-rep  pyproject.toml  run-moshi-server.sh  setup_quant_env.sh  stt_bnb_quant_bench.py  tail-moshi-server-log.sh  task.md  test-cuda-profile.nsys-rep  tsconfig.json  tts_mlx_quant_bench.py  walkthrough.md
.agent/: agent-state.json  agent-state.json.tmp
.github/workflows/: sm75-smoke.yml
.windsurf/todos/: agent-plan-creator.json
.windsurf/workflows/: build-moshi-server.md
audio/: tts-input-sample-01.jsonl
client/python/: integrity_check.py  run_tts_jwt.sh  stt_file_client.py
client/rust/: Cargo.toml  README.md
client/rust/kyutai-cli/: Cargo.toml
client/rust/kyutai-cli/src/: main.rs  stt.rs  tts.rs
client/rust/kyutai-client/: Cargo.toml
client/rust/kyutai-client-core/: Cargo.toml
client/rust/kyutai-client-core/src/: audio.rs  auth.rs  lib.rs  ws.rs
client/rust/kyutai-client/src/: lib.rs
client/rust/kyutai-client/src/stt/: audio.rs  protocol.rs  transcript.rs  ws.rs
client/rust/kyutai-client/src/stt/audio/: mic.rs
client/rust/kyutai-client/src/tts/: error.rs  mod.rs  protocol.rs  ws.rs
client/rust/kyutai-stt-cli/: .env.example  .gitignore  Cargo.toml  README.md  SYSTEM_DESIGN.md  biome.json
client/rust/kyutai-stt-cli/scripts/: ci.sh  generate_test_token.py
client/rust/kyutai-stt-cli/src/: main.rs
client/rust/kyutai-stt-client/: Cargo.toml
client/rust/kyutai-stt-client/src/: error.rs  protocol.rs
client/rust/kyutai-stt-client/src/audio/: mic.rs
client/rust/stt-rs/: .biomeignore  .gitignore  AGENTS.md  Cargo.toml  README.md  SYSTEM_DESIGN.md
client/rust/stt-rs/crates/kyutai-stt-cli/: Cargo.toml
client/rust/stt-rs/crates/kyutai-stt-cli/src/: auth.rs  main.rs
client/rust/stt-rs/crates/kyutai-stt-client/: Cargo.toml
client/rust/stt-rs/crates/kyutai-stt-client/src/: audio.rs  lib.rs  protocol.rs  transcript.rs  types.rs  ws.rs
client/rust/stt-rs/crates/kyutai-stt-client/src/audio/: level.rs  mic.rs
client/rust/stt-rs/scripts/: run-with-token.sh
client/rust/stt-rs/src/: main.rs
client/rust/tts-rs/: Cargo.toml
client/rust/tts-rs/src/: main.rs
configs/: README.md  config-stt-en-hf.toml  config-stt-en_fr-hf.toml  config-stt-en_fr-lowram-sm75.toml  config-tts-fast.toml  config-tts-realtime.toml  config-tts.toml  moshi_dev_2b.json
configs/models/: moshi_7b_202409.json  stt_1b_enfr.json  stt_2.6b_en.json
configs/stt/: config-stt-en-hf.toml  config-stt-en_fr-hf.toml  config-stt-en_fr-lowram-sm75.toml
docs/: ARCHITECTURE.md  BETTER_AUTH_INTEGRATION.md  MOSHI_SERVER_SETUP.md  PERFORMANCE_BENCHMARKING.md  REVERSE_PROXY_SETUP.md  TTS_STREAMING_TROUBLESHOOTING.md  TTS_TEST_PLAN.md  TTS_TEST_RESULTS.md  nextjs-web-client-design.md  oom_analysis.md
letsencrypt/: cached_account_gHQP1NYbHbDk4bFKY1y1iC54X79MMKuXL_gLFPVE0xA  cached_cert_Ea1AYZEcNUmjzFMqCTaVyMIoSNDZL2kPx2O_EUShawo  cached_cert_KQ8cx-o2BoNChoHq0mxq76WsGXpU1K6O_BqcGdykDR4
logs/moshi-logs/raw/: log.config-stt-en_fr-lowram-sm75.2025-11-15
moshi/: README.md
moshi/auth-server/: .gitignore  pnpm-lock.yaml
moshi/auth-server/scripts/: test_auth.sh  test_ws_auth.sh
moshi/auth-server/src/: auth.ts  index.ts  schema.ts
moshi/client/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
moshi/client/src/: app.tsx  audio-processor.ts  env.ts  index.css
moshi/rust/: Cargo.toml
moshi/rust/moshi-backend/: Cargo.toml
moshi/rust/moshi-core/src/: lm.rs  mimi.rs  nn.rs  transformer.rs
moshi/rust/moshi-server/: Cargo.toml  README.md
moshi/rust/moshi-server/src/: asr.rs  auth.rs  banner.rs  batched_asr.rs  bench.rs  lm.rs  logging.rs  main.rs  metrics.rs  protocol.rs  py_basr_module.rs  py_module.rs  py_module_post.rs  tts.rs  utils.rs
moshi/rust/plans/: lets_encrypt_support.md  ssl_implementation.md
moshi/scripts/: export_torch.py  update_repo.py
ops/: deploy-caddy.sh  gpu-monitor.sh  run-moshi-server.sh  setup-sentencepiece.sh  setup_quant_env.sh
quant_bench/: __init__.py  audio_loader.py  stt.py
scripts/: check_gpu_capability.py  deploy-caddy.sh  format_moshi_log.py  launch_moshi_server.py  prep_sm75_assets.py  publish_logs_to_s3.py  run_kyutai_tts_rs_with_jwt.py  run_tts_pytorch_baselines.py  start_tts_with_env.sh  stt_from_file_mlx.py  stt_from_file_rust_server.py  stt_from_mic_mlx.py  stt_from_mic_rust_server.py  tts_pytorch.py  tts_rust_server.py
server/python/delayed_streams_modeling/: __init__.py
server/python/scripts/: export_quantized.py
server/rust/: Cargo.toml  README.md
server/rust/moshi/: Cargo.toml  README.md  clippy_log.txt  moshi-profile.nsys-rep
server/rust/moshi/moshi-core/: Cargo.toml
server/rust/moshi/moshi-core/benches/: kv_cache.rs  transformer.rs
server/rust/moshi/moshi-core/src/: asr.rs  batched_transformer.rs  conv.rs  kv_cache.rs  lm.rs  lm_generate.rs  lm_generate_multistream.rs  nn.rs  quantization.rs  streaming.rs  transformer.rs  wav.rs
stt-rs/: Cargo.toml
systemd/caddy.service.d/: override.conf
tools/: Cargo.toml  tts-smoke-test.sh
tools/benchmarks/: README.md  stt_bnb_quant_bench.py  tts_rtf_bench.sh
tools/bf16-to-fp16/: Cargo.toml
tools/bf16-to-fp16/src/: main.rs
tools/deprecated-python/: convert_bf16_to_fp16.py  generate_test_token.py  prep_sm75_assets.py  run_sm75_smoke_test.py
tools/gpu-check/: Cargo.toml
tools/log-formatter/: Cargo.toml
tools/notebooks/: README.md
tools/quant-bench/: Cargo.toml
tools/quant_bench/: __init__.py  quant_bench.py  stt.py  tts.py
tools/s3-upload/: Cargo.toml
tools/sm75-prep/: Cargo.toml
tools/smoke-test/: Cargo.toml
tools/stt-client/: Cargo.toml
tools/stt-client/src/: main.rs
tools/token-gen/: Cargo.toml
tools/tts-client/: Cargo.toml
tools/tts-client/src/: main.rs
tts-rs/: Cargo.toml
tts-rs/src/: main.rs
(+71 files in other folders)
