[workspace]
resolver = "2"
members = [
    "server/rust/moshi/moshi-backend",
    "server/rust/moshi/moshi-cli",
    "server/rust/moshi/moshi-core",
    "server/rust/moshi/moshi-server",
    "client/rust/kyutai-client-core",
    "client/rust/kyutai-client",
    "client/rust/kyutai-cli",
    "tools/gpu-check",
    "tools/bf16-to-fp16",
    "tools/log-formatter",
    "tools/token-gen",
    "tools/sm75-prep",
    "tools/s3-upload",
    "tools/quant-bench",
    "tools/smoke-test",
]

[workspace.package]
version = "0.6.4"
edition = "2021"
license = "MIT/Apache-2.0"
description = "moshi server components"
repository = "https://github.com/kyutai-labs/moshi"
keywords = ["machine-learning", "audio"]
categories = ["science"]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8.7", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22.1"
base64ct = { version = "1.8.1", features = ["alloc"] }
bincode = "2.0.1"
byteorder = "1.5.0"
bytes = "1"
candle = { version = "0.9.1", package = "candle-core" }
chrono = "0.4"
candle-flash-attn = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15"
cpal = "0.16.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.3"
dirs = "6.0.0"
hf-hub = { version = "0.4.3", features = ["tokio"] }
http = "1.4.0"
indicatif = { version = "0.18", features = ["improved_unicode"] }
mimalloc = "0.1.43"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
kaudio = "0.2.1"
lazy_static = "1.5.0"
log = "0.4.29"
moshi = { path = "server/rust/moshi/moshi-core", version = "0.6.4" }
native-tls = "0.2.14"
nvml-wrapper = "0.11.0"
ogg = { version = "0.9.2", features = ["async"] }
owo-colors = "4"
opus = "0.3.0"
prometheus = "0.14.0"
rand = { version = "0.9.2" }
rand_chacha = "0.9.0"
ratatui = "0.29.0"
rayon = "1.11.0"
rcgen = "0.14.6"
regex = "1.12.2"
rmp-serde = "1.3.0"
ringbuf = "0.4.8"
rubato = "0.16.2"
rustls = "0.23.35"
sentencepiece = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sha3 = "0.10.8"
symphonia = { version = "0.5.5", features = ["all"] }
tokenizers = "0.22.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28.0", features = ["rustls", "native-tls"] }
toml = "0.9.10"
tower = "0.5.2"
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-chrome = "0.7.2"
tracing-rolling-file = { version = "0.1.3", features = ["non-blocking"] }
tracing-subscriber = { version = "0.3.22", features = ["chrono", "json"] }
tui-logger = "0.17.4"
url = "2.5"
vergen = { version = "=8.3.2", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si",
] }
thiserror = "2"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-no-debug]
inherits = "release"
debug = false
