[project]
name = "delayed-streams-modeling"
version = "0.1.0"
description = "Automation and helper scripts for Kyutai STT/TTS workflows."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "msgpack>=1.0.8",
  "numpy>=2.1.3",
  "sounddevice>=0.4.6",
  "websockets>=12.0",
]
