[package]
name = "stt-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.16"
dotenvy = "0.15"
futures-util = "0.3"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
kaudio = "0.2.1"

rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
url = "2.5"
hound = "3.5"
