[package]
name = "kyutai-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["env", "derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
kyutai-client = { path = "../kyutai-client" }
kyutai-client-core = { path = "../kyutai-client-core", features = ["ws", "audio"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures-util = { workspace = true }
ringbuf = { workspace = true }
hound = "3.5"
log = "0.4"
url = "2.5"

# For STT mic support
kaudio = { workspace = true }
cpal = { workspace = true }
rubato = { workspace = true }
