[package]
name = "kyutai-stt-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
hq-resample = ["dep:rubato", "kyutai-stt-client/hq-resample"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true }
kaudio = { workspace = true }
rubato = { workspace = true, optional = true }
kyutai-client-core = { path = "../kyutai-client-core" }

kyutai-stt-client = { path = "../kyutai-stt-client", default-features = true }
