[package]
name = "kyutai-stt-client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["mic", "file"]
mic = ["dep:cpal"]
file = ["dep:kaudio"]
hq-resample = ["dep:rubato"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

cpal = { workspace = true, optional = true }
rubato = { workspace = true, optional = true }
kaudio = { workspace = true, optional = true }
