[package]
name = "kyutai-stt-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
candle = { version = "0.9.1",  package = "candle-core" }
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive"] }
cpal = "0.16"
dotenvy = "0.15"
futures-util = "0.3"
hf-hub = "0.4.3"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
kaudio = "0.2.1"
moshi = "0.6.4"
rmp-serde = "1.3"
sentencepiece = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
url = "2.5"

[features]
default = []
cuda = ["candle/cuda", "candle-nn/cuda"]
cudnn = ["candle/cudnn", "candle-nn/cudnn"]
metal = ["candle/metal", "candle-nn/metal"]



