[workspace]
resolver = "2"
members = [
  "crates/kyutai-stt-client",
  "crates/kyutai-stt-cli",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
futures-util = "0.3"
url = "2"
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

# JWT token generation
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

# Audio
cpal = "0.16"
rubato = "0.16"
kaudio = "0.2.1"

