[package]
name = "kyutai-tts-rs"
version = "0.1.0"
edition = "2024"
description = "Rust TTS client for moshi-server WebSocket streaming API"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4" }
cpal = "0.16.0"
futures-util = "0.3"
hound = "3.5"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
ringbuf = "0.4.8"
rmp-serde = "1.3"
rubato = "0.16.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full", "rt-multi-thread", "macros", "io-std"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
url = "2.5"

