[package]
name = "kyutai-stt-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
kaudio = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

kyutai-stt-client = { path = "../kyutai-stt-client", default-features = true }

