[package]
name = "kyutai-stt-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
hq-resample = ["dep:rubato", "kyutai-stt-client/hq-resample"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
kaudio = { workspace = true }
rubato = { workspace = true, optional = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

kyutai-stt-client = { path = "../kyutai-stt-client", default-features = true }
